# data-aquisition-system

./: CMakeLists.txt  README.md  info.md  sensor_server
.devcontainer/: Dockerfile
emulators/: client_emulator.py  sensor_emulator.py
examples/: async_echo_server.cpp  binary_file_manipulation.cpp
sensor_emulator/: sensor_emulator.py
src/: main.cpp
